dnl    dlz-ldap-enum: bind9 DLZ module for using an LDAP database to answer
dnl                   ENUM queries over DNS
dnl    Copyright (C) 2012 Daniel Pocock
dnl
dnl    This program is free software: you can redistribute it and/or modify
dnl    it under the terms of the GNU General Public License as published by
dnl    the Free Software Foundation, either version 3 of the License, or
dnl    (at your option) any later version.
dnl
dnl    This program is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl    GNU General Public License for more details.
dnl
dnl    You should have received a copy of the GNU General Public License
dnl    along with this program.  If not, see <http://www.gnu.org/licenses/>.

AC_INIT(dlz-ldap-enum,1.0.0)
AC_CONFIG_SRCDIR(dlz_ldap_driver.c)
AM_INIT_AUTOMAKE

AC_CONFIG_MACRO_DIR([m4])

AC_CANONICAL_HOST
AM_CONFIG_HEADER(config.h)

AC_PROG_CC

AC_PROG_INSTALL

AC_PROG_LIBTOOL

AC_OUTPUT(Makefile)


